welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:12: error: reassignment to val
	nbTour = nbTour + 1;
               ^